@@ -1,3 +1,5 @@
+import re, time
+
 from funcy.debug import *
 
 
@@ -8,7 +10,6 @@ def test_log_calls():
     def f(x, y):
         return x + y
 
-
     f(1, 2)
     f('a', 'b')
     assert log == [
@@ -17,3 +18,21 @@ def test_log_calls():
         "Call f('a', 'b')",
         "-> 'ab' from f('a', 'b')",
     ]
+
+
+def test_log_calls_raise():
+    log = []
+
+    @log_calls(log.append)
+    def f():
+        raise Exception('something bad')
+
+    try:
+        f()
+    except:
+        pass
+    assert log == [
+        "Call f()",
+        "-> raised Exception: something bad in f()",
+    ]
+
