@@ -1,5 +1,6 @@
 - greatly optimized @decorator
 - @logs_calls and @print_calls now provide call signature on return
+- @logs_calls and @print_calls now log errors, optional for @log_calls
 - better call signature stringification for @(log|print)_(calls|errors)
 
 0.6.0
